# x402-ton-facilitator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
examples/: client_pay_ton.py  server_accept_ton.py
facilitator/: __init__.py  config.py  main.py  state.py
scripts/: setup_testnet.py
tests/: conftest.py  test_e2e.py  test_e2e_mainnet.py  test_negative_paths.py  test_self_relay.py  test_signing.py
tvm_core/: __init__.py  address.py  boc.py  constants.py  ed25519.py  jetton.py  providers.py  self_relay.py  signing.py  state.py  tonapi.py  types.py  verify.py
x402_tvm/: __init__.py  config.py
x402_tvm/exact/: __init__.py  client.py  facilitator.py  register.py  server.py
